fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
     src: url(fonts/digital-7.ttf);
   }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body{
+    position: relative;
     margin: 0;
     display: flex;
     height: 100vh;
